--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,17 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
+        
         <activity
-            android:name=".Main"
-            android:label="@string/title_activity_main" >
+            android:name=".ui.Duckdroid"
+            android:label="@string/title_activity_duckdroid" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
