--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="net.nakama.duckdroid.ui.Duckdroid" />
         </activity>
+        
+        <!-- Widget -->
+	    <receiver android:name=".ui.widget.DuckDroidWidgetAppProvider" android:exported="false">
+		    <intent-filter>
+		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+		    </intent-filter>
+		    <meta-data android:name="android.appwidget.provider"
+		               android:resource="@xml/duckdroidwidgetprovider" />
+		</receiver>
     </application>
+    
 
 </manifest>
