--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,14 +31,14 @@
                 android:value="net.nakama.duckdroid.ui.Duckdroid" />
         </activity>
         
-        <!-- Widget -->
-	    <receiver android:name=".ui.widget.DuckDroidWidgetAppProvider" android:exported="false">
-		    <intent-filter>
-		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-		    </intent-filter>
-		    <meta-data android:name="android.appwidget.provider"
-		               android:resource="@xml/duckdroidwidgetprovider" />
-		</receiver>
+        <activity
+            android:name=".ui.AboutActivity"
+            android:label="@string/title_activity_duckdroid_about" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.nakama.duckdroid.ui.Duckdroid" />
+        </activity>
+        
     </application>
     
 
